# promptpack-eval

./: .gitignore  LICENSE  PRIVACY_CHECKLIST.md  README.md  pyproject.toml
configs/: privacy_markers_example.toml  run_example.toml  scoring_acbp_default.toml
docs/: architecture.md  prompt-packs.md  reproducibility.md  scoring.md
promptpacks/esni_reference/: pack.toml  prompts.md
promptpacks/example_minimal/: pack.toml  prompts.md
promptpacks/srop_reference/: pack.toml  prompts.md
src/promptpack_eval/: __init__.py  blinding.py  cli.py  config.py  exports.py  hashing.py  metadata.py  privacy.py  prompts.py  runner.py
src/promptpack_eval/adapters/: __init__.py  base.py  mock.py  ollama.py
src/promptpack_eval/scoring/: __init__.py  acbp.py  base.py
tests/: conftest.py  test_blinding.py  test_cli.py  test_exports.py  test_hashing.py  test_privacy.py  test_prompts.py  test_scoring_acbp.py
